Adding extract_features.py script, and notebook to map features for pediatric patients

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-experiments/main/data/
-experiments/main/artifacts/
+experiments/data/*
+experiments/artifacts/*
 .ipynb_checkpoints/
 *.log
-experiments/main/notebooks/figures
-experiments/main/scripts/__pycache__
+experiments/notebooks/figures
+experiments/scripts/__pycache__
+experiments/scripts/dask-worker-space
