--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ experiments/artifacts/*
 .ipynb_checkpoints/
 *.log
 experiments/notebooks/figures
+experiments/notebooks/deprecated
 experiments/scripts/__pycache__
 experiments/scripts/dask-worker-space
