changing cohort_split to use 2008-2019 train/val and 2020-2022 test splits

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ experiments/notebooks/featurizer_issue
 experiments/scripts/__pycache__
 experiments/scripts/dask-worker-space
 experiments/logs/*
+experiments/data/cohort/
+*.parquet
