--- a/experiments/hyperparams/sgd.yml
+++ b/experiments/hyperparams/sgd.yml
@@ -6,7 +6,7 @@ penalty:
  - 'l2'
 max_iter:
  - 10000
-C:
+alpha:
 - 1.0e-06
 - 1.0e-05
 - 0.0001
@@ -14,3 +14,8 @@ C:
 - 0.01
 - 0.1
 - 1
+- 10
+- 100
+- 1000
+- 10000
+- 100000
