Running sanity checks and error analysis

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ experiments/scripts/dask-worker-space
 experiments/logs/*
 experiments/data/cohort/
 *.parquet
+**/__pycache__
+experiments/notebooks/llg
+experiments/data
+experiments/artifacts
+experiments/scripts/deprecated
